# layerswap-depository

./: .env.example  .gitignore  README.md
evm/: README.md  foundry.toml
evm/script/: DeployLayerswapDepository.s.sol  VerifyAllFromBroadcast.ps1
evm/test/: LayerswapDepository.gas.t.sol  LayerswapDepository.t.sol
script/: DeployLayerswapDepository.s.sol
solana/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
solana/programs/depository/: Cargo.toml
solana/programs/depository/src/: events.rs  lib.rs
solana/programs/depository/src/instructions/: authority.rs  deposit_native.rs  deposit_token.rs  initialize.rs  mod.rs  pause.rs  update_receiver.rs
solana/programs/test-transfer-hook/: Cargo.toml
solana/programs/test-transfer-hook/src/: lib.rs
solana/src/: errors.rs  events.rs  lib.rs
solana/src/instructions/: add_receiver.rs  authority.rs  deposit_sol.rs  deposit_spl.rs  initialize.rs  mod.rs  pause.rs  remove_receiver.rs
solana/src/state/: config.rs  mod.rs  whitelist_entry.rs
solana/tests/: layerswap-depository.ts
src/: LayerswapDepository.sol
test/: LayerswapDepository.gas.t.sol  LayerswapDepository.t.sol
