[workspace]
resolver = "2"

[package]
name = "layerswap-depository"
version = "0.1.0"
description = "Layerswap non-custodial depository program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "layerswap_depository"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
