[package]
name = "test-transfer-hook"
version = "0.1.0"
description = "Minimal transfer hook program for testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
spl-tlv-account-resolution = "0.9.0"
spl-transfer-hook-interface = "0.10.0"
